# utf_symbols

./: Cargo.toml  LICENSE  README.md
src/: main.rs  tui.rs  unicode.rs
