[package]
name           = "utf_symbols"
description    = "A quick tool to search symbols (any named character) in the utf table."
homepage       = "https://github.com/xgillard/utf_symbols/"
repository     = "https://github.com/xgillard/utf_symbols/"
readme         = "README.md"
authors        = ["Xavier Gillard <xaviergillard@gmail.com>"]
license        = "MIT"
edition        = "2024"
version        = "1.0.2"
   
keywords       = [ "utf", "search" ]
categories     = [ "development-tools" ]

[dependencies]
anyhow         = "1.0.98"
arboard = "3.5.0"
crossterm      = "0.29.0"
ratatui        = "0.29.0"
rayon          = "1.10.0"
tui-prompts    = "0.5.0"
unicode_names2 = "1.3.0"
